# autonomous-sar-ops

./: README.md  main.py  pyproject.toml  requirements.txt
docs/: architecture.md  plan.md
src/autonomous_sar_ops/envs/: example.py  sar_grid_env.py
