[project]
name = "autonomous-sar-ops"
version = "0.1.0"
description = "Small autonomous search-and-rescue simulation project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=0.29",
    "highspy>=1.7",
    "matplotlib>=3.8",
    "networkx>=3.2",
    "numpy>=1.26",
    "ortools>=9.8",
    "pandas>=2.2",
    "pydantic>=2.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyyaml>=6.0",
    "tqdm>=4.66",
]
